# stock-prediction

./: .gitignore  LICENSE.md  README.md  archive.sh  pyproject.toml  requirements.txt  stocks.tsv
data/: DATA.md
playground/categorical-timeseries/: categorical-timeseries.ipynb  data.csv
playground/offsets/: .gitignore  collect-data.ipynb  prepare-data.ipynb  stocks.tsv  training.ipynb
playground/regular-timeseries/: regular-timeseries.ipynb
playground/reinforcement-learning/: collect-data.ipynb
playground/stock-sentiment/: stock-sentiment.ipynb  ticker-symbols.txt
src/: download.py  download_data.py  init_file_system.py  main.py  predict-test.ipynb  predict.py  stock-prediction.ipynb  tickers.py
src/otway-asx-game/: stock-prediction.ipynb
src/otway-sp500/: data.ipynb  extension_train.ipynb
