[project]
name = "stock-prediction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel", email = "58995538+jtpotato@users.noreply.github.com" }
]
dependencies = [
    "ipykernel>=6.29.4",
    "pandas>=2.2.2",
    "yfinance[nospam]>=0.2.40",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stock_prediction"]
