[project]
name = "stock-prediction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel", email = "58995538+jtpotato@users.noreply.github.com" }
]
dependencies = [
    "ipykernel>=6.29.4",
    "pandas>=2.2.2",
    "yfinance[nospam]>=0.2.40",
    "scikit-learn>=1.5.0",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "torchaudio>=2.3.1",
    "matplotlib>=3.9.0",
    "lightning>=2.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stock_prediction"]
